--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -12,14 +12,22 @@ html {
 
 /*
  * Global layout stuff
- */
+ */ 
 
 body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
+main {
+  width:90%;
+  margin:auto;
+  background-color: #f4f1ec;
+  text-align: center;
+  padding-top:64px;
+ }
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
