--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,18 +1,49 @@
-.tweet-container {
-  flex-direction: column;
+.tweet-container{
   display: flex;
-  background-color: #f4f1ec;
-  border-radius: 5px;
-  border: 1px, solid, #000000;
-  padding: 0;
-  display: flex;
-  margin-top: 50px;
-  background-color: white;
-  height: 220px;
+  justify-content: center;
 }
 
-.tweet-content{
-  font-size: 1.3em;
-  margin-left: 15px;
-  margin-top: 35px;
+.tweet-content {
+  display: flex;
+  padding: 1px;
+  margin-top: 10px;
+  width: 100%;
+  border-bottom: 1px solid black;
+  background-color: white;
+  font-size: 20px;
+  text-align: left;
 }
+
+.tweet-article{
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  border: 1px solid black;
+  height: 100%;
+  width: 800px;
+  margin: 0;
+}
+
+.footer {
+  display: flex;
+  text-align: left;
+  font-size: 17px;
+}
+
+.tweet-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 50px;
+  background-image: none;
+  width: 100%;
+  padding: 40px;
+  background-color:#f4f1ec;
+  color: black;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.tweet-username {
+  display: flex;
+  font-size: 17px;
+ }*/
