--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,8 +1,9 @@
 header {
+  display: flex;
+  justify-content: center;
   height: 400px;
   width: 100%;
   padding: 40px;
-  text-align: center;
   background-color:#db9a22;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
   color: #FFFFFF;
