--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,14 +1,27 @@
 .topnav {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  top: 0;
+  position: fixed;
   height: 120px;
   width: 100%;
   background-color:#4056A1;
   color: #FFFFFF;
   font-family: "Bungee", sans-serif;
   padding: 35px 35px;
-  font-size: 60px;
 }
 
-.leftside-nav{
-  float: right;
+.topnav-right{
+  display: flex;
+  /* justify-content: flex-start; */
+  font-family: "Bungee", sans-serif;
+  font-size: 20;
+}
+
+.topnav-left{
+  display: flex;
+  /* justify-content: flex-end; */
   font-family: "Source Sans Pro", sans-serif;
+  font-size: 20;
 }
