--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
-  height: 80px;
+  height: 90px;
   width: 100%;
   background-color: #4056A1;
   color: #FFFFFF;
   font-family: "Bungee", sans-serif;
   top: 0;
   position: fixed;
-  padding: 0 2em 0 2em;
+  padding: 0 2em;
 }
 
 .navbar-left{
@@ -21,5 +21,7 @@
 .navbar-right{
   display: flex;
   font-family: "Source Sans Pro", sans-serif;
+  background-color: #4056A1;
+  color: #FFFFFF;
   font-size: 50px;
 }
