--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -5,31 +5,22 @@
 
 .tweet-content {
   display: flex;
-  padding: 1px;
+  padding-left: 15px;
   width: 100%;
   border-bottom: 3px solid black;
   background-color: #f4f1ec;
   font-size: 20px;
-  text-align: left;
 }
 
 .tweet-article{
   display: flex;
   flex-direction: column;
-  border-radius: 5px;
   border: 3px solid black;
-  border: 100%;
   height: 100%;
   width: 800px;
-  margin: 15px auto;
-  margin-top: 25px auto;
+  margin: 34px auto;
 }
 
-.footer {
-  display: flex;
-  text-align: left;
-  font-size: 17px;
-}
 
 .tweet-header {
   display: flex;
@@ -38,32 +29,28 @@
   height: 50px;
   background-image: none;
   width: 100%;
-  padding: 40px;
+  padding-top: 20px;
   background-color:#f4f1ec;
   color: black;
   font-family: "Source Sans Pro", sans-serif;
 }
 
 .tweet-username1 {
+  padding-left: 15px;
   display: flex;
-  flex-direction: row;
   font-size: 17px;
  }
 
  .tweet-username2 {
-  display: flex;
-  flex-direction: row;
+  padding-right: 15px;
   color: grey;
   font-size: 17px;
  }
-
- .tweet-icon {
-   display: flex;
-   flex-direction: row;
- }
-
- .tweet-flags {
-   display: flex;
-   flex-direction: row;
-   justify-content: flex-end;
- }
+ 
+ .footer {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 17px;
+}
