update margins and styles based on feedback, update associated html elements

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,10 +1,7 @@
-header {
-  /* justify-content: center; */
-  /* align-items: center; */
+.header {
   height: 400px; 
   width: 100%;
-  padding-top: 5%;
-  /* padding-bottom: 3%; */
+  padding-top: 4.5%;
   background-color:#db9a22;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
   color: #FFFFFF;
