--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,27 +1,26 @@
 .navbar {
   display: flex;
-  justify-content: space-around;
-  align-items: flex-end;
   height: 80px;
   width: 100%;
   background-color: #4056A1;
   color: #FFFFFF;
   font-family: "Bungee", sans-serif;
-  top: 0;
   position: fixed;
   padding: 0 2em;
 }
 
 .navbar-left{
-  display: flex;
   font-family: "Bungee", sans-serif;
   font-size: 60px;
+  margin-right: auto;
 }
 
 .navbar-right{
-  display: flex;
+  margin-top: 5px;
+  margin-bottom: 5px;
   font-family: "Source Sans Pro", sans-serif;
   background-color: #4056A1;
+  border: 2px solid white; 
   color: #FFFFFF;
-  font-size: 50px;
+  font-size: 40px;
 }
