--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -5,11 +5,11 @@
 
 .tweet-content {
   display: flex;
-  padding-left: 15px;
   width: 100%;
   border-bottom: 3px solid black;
   background-color: #f4f1ec;
   font-size: 20px;
+  padding-left: 10px;
 }
 
 .tweet-article{
@@ -25,26 +25,34 @@
 .tweet-header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   height: 50px;
   background-image: none;
   width: 100%;
-  padding-top: 20px;
   background-color:#f4f1ec;
   color: black;
   font-family: "Source Sans Pro", sans-serif;
 }
 
 .tweet-username1 {
-  padding-left: 15px;
   display: flex;
   font-size: 17px;
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-right: auto;
  }
 
  .tweet-username2 {
+  margin-top: 20px;
   padding-right: 15px;
   color: grey;
   font-size: 17px;
+ }
+
+ .tweet-icon {
+   width: 40px;
+   height: 40px;
+   margin-top: 10px;
+   margin-left: 10px;
  }
  
  .footer {
